<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/channel_status_off" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <LinearLayout
            android:id="@+id/monitoring_lay_realtime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_buttom_iv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/monitoring_buttom_1_click" />

            <TextView
                android:id="@+id/details_buttom_tv_realtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/monitoring_details_text_current"
                android:textColor="@color/blue_main_ui"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/monitoring_lay_history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_buttom_iv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/monitoring_buttom_2" />

            <TextView
                android:id="@+id/details_buttom_tv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/monitoring_details_text_history"
                android:textColor="@color/main_balck"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/monitoring_lay_warning"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_buttom_iv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:src="@drawable/monitoring_buttom_3" />

            <TextView
                android:id="@+id/details_buttom_tv_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/monitoring_details_text_warning"
                android:textColor="@color/main_balck"
                android:textSize="12sp" />
        </LinearLayout>





    </LinearLayout>

</LinearLayout>